add update method into the AttributeTypeController
